--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,6 +1,68 @@
-$primary-color: #444;
+@import 'config';
+*{
+    box-sizing: border-box;
+}
 
 body{
+    @include backgroun;
     background: $primary-color;
     color: #ffffff;
+    height: 100%;
+    margin: 0;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    line-height: 1.5;
+}
+
+h1,
+h2 {
+  margin: 0;
+  font-weight: 400; 
+ 
+    &.lg-heading{
+        font-size: 5rem;
+    }
+    &.sm-heading{
+        margin-bottom: 2rem; 
+        padding: 0.2rem 1rem;
+        background: rgba(lighten($primary-color, 2), 0.5);
+    }
+} 
+
+a{
+    color:#ffffff;
+    text-decoration: none;
+   
+}
+
+header{
+    position: fixed;
+    z-index: 2;
+    width: 100%;
+}
+.text-secondary{
+    color:$secondary-color;
+}
+main{
+    padding:4rem;
+    height: 100%;
+
+    .icons{
+    margin-top: 1rem;
+   
+       a{
+           padding: 20px;
+         
+
+           &:hover{
+              color:red;
+             @include easeOut();
+           }
+       }
+    }
+    &#home{
+        overflow: hidden;
+        h1{
+            margin-top: 20vh;
+        }
+    }
 }
