--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,10 +1,11 @@
 @import 'config';
+@import 'menu';
 *{
     box-sizing: border-box;
 }
 
 body{
-    @include backgroun;
+    @include background;
     background: $primary-color;
     color: #ffffff;
     height: 100%;
