--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -1,7 +1,7 @@
 $primary-color: #444;
 $secondary-color:#ccae06;
 $show-home-image:true;
-$home-image:url(../img/background.jpg);
+$home-image:url(../img/img.jpg);
 $background-opacity:0.5s;
 @mixin easeOut {
     transition: all 0.9s ease-out;
