--- a/scss/main.scss
+++ b/scss/main.scss
@@ -18,6 +18,11 @@ body{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     line-height: 1.5;
 }
+.overlay{
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
 h1,
 h2 {
   margin: 0;
